--- a/SanFrancisco.html
+++ b/SanFrancisco.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="LosAngeles.html">Los Angeles</a></li>
                 <li><a href="sacramento.html">Sacramento</a></li>
+                <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
