--- a/sacramento.html
+++ b/sacramento.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="LosAngeles.html">Los Angeles</a></li>
                 <li><a href="SanFrancisco.html">San Francisco</a></li>
+                <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
